--- a/src/SimpleUniversalWebserver/TestApp/App.xaml
+++ b/src/SimpleUniversalWebserver/TestApp/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="TestApp.App"
+    x:Class="WebserverTest.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestApp"
+    xmlns:local="using:WebserverTest"
     RequestedTheme="Light">
 
 </Application>
