--- a/src/SimpleUniversalWebserver/TestApp/MainPage.xaml
+++ b/src/SimpleUniversalWebserver/TestApp/MainPage.xaml
@@ -1,13 +1,17 @@
 ﻿<Page
-    x:Class="TestApp.MainPage"
+    x:Class="WebserverTest.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TestApp"
+    xmlns:local="using:WebserverTest"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Button x:Name="StartButton" Content="Start Server" HorizontalAlignment="Left" Margin="103,206,0,0" VerticalAlignment="Top" Click="startButton_Click"/>
+        <Button x:Name="StopButton" Content="Stop Server" HorizontalAlignment="Left" Margin="222,206,0,0" VerticalAlignment="Top" Click="stopButton_Click"/>
+        <TextBlock x:Name="StatusTextBlock" HorizontalAlignment="Left" Margin="103,243,0,0" TextWrapping="Wrap" Text="Status: " VerticalAlignment="Top"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="146,127,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
